--- a/System analysis/Code/State_space realization.ipynb
+++ b/System analysis/Code/State_space realization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -156,19 +156,19 @@
     "      'dxv2_dt',\n",
     "      'dxv3_dt',\n",
     "      'dp3VT_dt',\n",
-    "      'dFcwT_dt']\n",
+    "      'dVTcw_dt']\n",
     "\n",
     "[Ca,Cb,Cc,Na,K,V,p1,p2,p3,rao,rbo,ra,rb,rc,rsolvent,F2,F3,Fcw,del_PV2,xv1,xv2,xv3,\n",
     " T,Tcw,Qj,Qair,H,Cao,F1,Ps1,Ps2,Ps3,Tbo,Fcw,Tcw,dVCa_dt,dVCb_dt,dVCc_dt,dVp3_dt,dxv1_dt,\n",
-    " dxv2_dt,dxv3_dt,z,dz_dt,dxv2_dt,dxv3_dt,dp3VT_dt,dFcwT_dt] = sp.symbols(var)\n",
+    " dxv2_dt,dxv3_dt,z,dz_dt,dxv2_dt,dxv3_dt,dp3VT_dt,dVTcw_dt] = sp.symbols(var)\n",
     "\n",
     "dstates = [dVCa_dt,dVCb_dt,dVCc_dt,dVp3_dt,dxv1_dt,\n",
-    " dxv2_dt,dxv3_dt,z,dz_dt,dxv2_dt,dxv3_dt,dp3VT_dt,dFcwT_dt]\n",
+    " dxv2_dt,dxv3_dt,z,dz_dt,dxv2_dt,dxv3_dt,dp3VT_dt,dVTcw_dt]\n",
     "\n",
     "ss_ders = np.zeros(len(dstates))\n",
     "ss_subs= zip(dstates,ss_ders)\n",
     "\n",
-    "states= [V*Ca,V*Cb,V*Cc,V*p3,xv1,xv2,xv3,z,xv2,xv3,p3*V*T,Fcw*Tcw]\n",
+    "states= [V*Ca,V*Cb,V*Cc,V*p3,xv1,xv2,xv3,z,xv2,xv3,p3*V*T,V*Tcw]\n",
     "\n",
     "variables =  [F2, F3,Fcw, Ca, Cb, Cc, Na,K,V,xv1,z,xv2,xv3, p1,p2,p3,T,Qj,Tcw,Qair,rao,\n",
     "              rbo,ra,rb,rc,rsolvent,H,del_PV2]\n",
@@ -202,7 +202,7 @@
     "      tau_v2*dxv2_dt + xv2,\n",
     "      tau_v3*dxv3_dt + xv3,\n",
     "      p1*F1*Cp1*Tao+p2*F2*Cp2*Tbo - delta_H*ra,\n",
-    "      dFcwT_dt,\n",
+    "      rhocw*Cpcw*dVTcw_dt,\n",
     "      Qj,\n",
     "      Qair,\n",
     "      H]\n",
@@ -231,7 +231,7 @@
     "       Kv2*Ps2,\n",
     "       Kv3*Ps3,\n",
     "       p3*F3*Cp3*T + Qj + Cp3*dp3VT_dt,\n",
-    "       Fcw*rhocw*(Tcwo-Tcw) + Qj - Qair,\n",
+    "       Fcw*rhocw*Cpcw*(Tcwo-Tcw) + Qj - Qair,\n",
     "       Uj*(pi*D)*(H*(T-Tcw)),\n",
     "       U_air*(pi*D)*(L-H)*(T-Tcw),  \n",
     "       V/A]\n"
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -250,7 +250,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
